# wechatReader

./: .gitignore  README.md  index.html  metadata.json  package.json  server.ts  微信数据库存储格式详解.md
components/ui/: scroll-area.tsx
server/: db.ts
src/: App.tsx  index.css  types.ts
src-cli/: Cargo.toml
src-cli/keys_bin/: find_all_keys_macos.arm64
src-cli/scripts/: table_view.py
src-cli/src/: config.rs  contacts.rs  context.rs  crypto.rs  db_cache.rs  formatter.rs  key_utils.rs  keys.rs  main.rs  messages.rs
src-cli/src/commands/: contacts_cmd.rs  export.rs  favorites.rs  history.rs  init.rs  members.rs  mod.rs  new_messages.rs  search.rs  sessions.rs  stats.rs  unread.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ArticleView.tsx  ChatView.tsx  ContentArea.tsx  GlobalSearch.tsx  InitializationWizard.tsx  MainLayout.tsx  MessageTable.tsx  SettingsView.tsx  Sidebar.tsx  SubscriptionSettings.tsx
src/lib/: mockData.ts  storage.ts  tauri.ts
src/mock-tauri/: cli-api-plugin.ts  cli-api.ts  index.ts  mock-handlers.ts
src/store/: index.ts
