[package]
name = "wechat-reader-cli"
version = "0.1.0"
description = "私有化微信内容管理 CLI 工具 — 查询本地微信聊天记录、联系人、会话等数据"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "wechat-reader"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
walkdir = "2"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"
zstd = { version = "0.13", features = ["bindgen"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
log = "0.4"
